--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: 🐛 Bug Report
 description: Report an error to help improve the project
-title: "🐞 BUG: Short description of the issue"
+title: "BUG: Short description of the issue"
 labels: [bug]
 assignees: [soliberdev]
 
