Update: Modify text of the bug issue template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: 🐛 Bug Report
 description: Report an error to help improve the project
-title: "BUG: Short description of the issue"
+title: "🐞 BUG: Short description of the issue"
 labels: [bug]
 assignees: [soliberdev]
 
@@ -8,23 +8,23 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## 🐛 Bug Report
-        Thanks for reporting a bug. Please fill out the following form as accurately as possible.
+        ## 🐛 Found a bug?
+        No worries — thanks for taking the time to report it! Please fill out the info below so I can understand and fix it faster.
 
   - type: textarea
     id: bug-description
     attributes:
-      label: 🐞 Bug Description
-      description: Provide a clear description of the error.
-      placeholder: A clear and concise description of what the issue is.
+      label: 🐞 What's going wrong?
+      description: Tell me what’s happening. Be as clear as you can.
+      placeholder: Describe the issue you're seeing.
     validations:
       required: true
 
   - type: textarea
     id: steps-to-reproduce
     attributes:
-      label: 🔁 Steps to Reproduce the Bug
-      description: Step-by-step instructions to reproduce the error.
+      label: 🔁 How can we see it too?
+      description: Walk me through the steps so I can try to reproduce the issue.
       placeholder: |
         1. Go to '...'
         2. Click on '...'
@@ -35,8 +35,8 @@ body:
   - type: textarea
     id: expected-behavior
     attributes:
-      label: ✅ Expected Behavior
-      description: What was the expected behavior?
+      label: ✅ What did you expect to happen?
+      description: Let me know what you thought would happen instead.
       placeholder: I expected it to...
     validations:
       required: true
@@ -44,8 +44,8 @@ body:
   - type: textarea
     id: environment
     attributes:
-      label: 🖥️ Environment Information (optional)
-      description: Relevant system and environment information.
+      label: 🖥️ Where did this happen? (optional)
+      description: Tell me about your system or setup, if it might help.
       placeholder: |
         - OS: Windows 10
         - Browser: Chrome 125
@@ -55,12 +55,12 @@ body:
     id: screenshots
     attributes:
       label: 📷 Screenshots or Logs (optional)
-      description: Attach screenshots or logs if they help explain the error.
-      placeholder: Paste screenshots or logs here.
+      description: Got an error message, console output, or a screenshot? Drop it here.
+      placeholder: You can paste images or code logs here.
 
   - type: textarea
     id: additional-info
     attributes:
-      label: 📌 Additional Information
-      description: Any other relevant information.
-      placeholder: Context, links, related issues, etc.
+      label: 📌 Anything else?
+      description: If there's more context, links, or related issues, include them here.
+      placeholder: Context, related tickets, guesses about the cause, etc.
